[tool.poetry]
name = "guardian"
version = "1"
description = ""
authors = ["Debajyoti Chatterjee"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.17"
bottle-beaker = "^0.1.3"
bottle-sqlite = "^0.1.3"
cheroot = "^8.2"
bcrypt = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
